force-app/main/default/objects/Fleet_User_Preference__c/Fleet_User_Preference__c.object-meta.xml
<CustomObject>
    <description>Per-user Fleet console preferences. Private OWD, owner-only.</description>
    <label>Fleet User Preference</label>
    <nameField>
        <displayFormat>PREF-{00000}</displayFormat>
        <label>Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fleet User Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>