force-app/main/default/objects/Fleet_User_Preference__c/fields/Default_View__c.field-meta.xml
<CustomField>
    <fullName>Default_View__c</fullName>
    <description>View the console opens to, matching Fleet_View__mdt.View_Key__c.</description>
    <label>Default View</label>
    <type>Text</type>
    <length>80</length>
</CustomField>