force-app/main/default/objects/Fleet_User_Preference__c/fields/Density__c.field-meta.xml
<CustomField>
    <fullName>Density__c</fullName>
    <description>Table row density preference for the console.</description>
    <label>Density</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comfortable</fullName>
                <default>true</default>
                <label>Comfortable</label>
            </value>
            <value>
                <fullName>Compact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>