force-app/main/default/objects/Fleet_User_Preference__c/fields/Notification_Settings__c.field-meta.xml
<CustomField>
    <fullName>Notification_Settings__c</fullName>
    <description>JSON of per-channel notification preferences.</description>
    <label>Notification Settings</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>