force-app/main/default/objects/Fleet_User_Preference__c/fields/Preferred_Categories__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Categories__c</fullName>
    <description>Comma-separated finding or drift categories the user wants surfaced first.</description>
    <label>Preferred Categories</label>
    <type>Text</type>
    <length>255</length>
</CustomField>