force-app/main/default/objects/Fleet_User_Preference__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <description>Preferred color theme for the console.</description>
    <label>Theme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
                <default>true</default>
                <label>System</label>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Dark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>