force-app/main/default/objects/Fleet_User_Preference__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>The user these preferences belong to.</description>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Fleet User Preferences</relationshipLabel>
    <relationshipName>FleetUserPreferences</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>